# amongus-leaderboard

./: .geminiignore  .gitignore  .gitleaksignore  ANALYSIS.md  CLAUDE.md  LEARNINGS.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/: PEERS.md  instructions.md
.claude/agents/: builder.md
.github/: copilot-instructions.md
.github/prompts/: plan-prepareCodebaseForOpenSource.prompt.md
.github/workflows/: deploy.yml  frontend.yml  run-games.yml  sync-bucket-logs.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.toml  setup_local.py
backend/alembic/: env.py
backend/alembic/versions/: 6045df689d73_add_win_tracking_columns.py  629d32895e95_add_engine_version_to_games.py
backend/app/: main.py
backend/app/api/: deps.py  games.py  leaderboard.py  models.py  schemas.py
backend/app/core/: config.py  constants.py  database.py
backend/app/models/: __init__.py  base.py  game.py  model.py
backend/app/services/: game_runner.py  live_logs.py  matchmaking.py  rating_service.py  storage_service.py
backend/scripts/: backfill_wins.py  fix_participant_colors.py  run_games.py  season_analysis.py  seed_models.py  sync_bucket_logs.py  test_weights.py  upload_local_logs.py
backend/tests/: conftest.py  test_api_endpoints.py  test_bulk_runner.py  test_game_completion.py  test_live_logs.py  test_models.py  test_rating_service.py  test_run_games_direct.py  test_storage_service.py  test_sync_bucket_logs.py
docs/superpowers/plans/: 2026-03-15-chart-homepage.md
docs/superpowers/specs/: 2026-03-15-chart-homepage-design.md
frontend/: .env.example  .env.local.example  Dockerfile  instrumentation-client.ts  package.json  posthog-setup-report.md  railway.toml  vitest.config.ts
frontend/__tests__/: eliminationEvents.test.ts  game-logs.test.ts  mock-data.test.ts
frontend/__tests__/components/: ErrorMessage.test.tsx  LeaderboardCards.test.tsx  LeaderboardTable.test.tsx  PageLayout.test.tsx  RankIndicator.test.tsx  RatingChart.test.tsx  (+1 more)
trio-agents/: builder.md  reviewer.md
(+38 files in other folders)
